--- a/mdr/busybox/cephfs/busybox-pvc.yaml
+++ b/mdr/busybox/cephfs/busybox-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-pvc
+  name: busybox-pvc-cephfs
   labels:
     appname: busybox
 spec:
