Correct the pvc name
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/busybox/cephfs/busybox-pod.yaml
+++ b/mdr/busybox/cephfs/busybox-pod.yaml
@@ -17,5 +17,5 @@ spec:
   volumes:
     - name: mypvc
       persistentVolumeClaim:
-        claimName: busybox-pvc
+        claimName: busybox-pvc-cephfs
         readOnly: false
