--- a/mdr/busybox/cephfs/busybox-pvc.yaml
+++ b/mdr/busybox/cephfs/busybox-pvc.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-pvc-cephfs
+  name: busybox-cephfs-pvc
   labels:
-    appname: busybox
+    appname: busybox-cephfs
 spec:
   accessModes:
   - ReadWriteOnce
