--- a/mdr/busybox/rbd/busybox-pvc.yaml
+++ b/mdr/busybox/rbd/busybox-pvc.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-pvc
+  name: busybox-rbd-bvc
   labels:
-    appname: busybox
+    appname: busybox-rbd
 spec:
   accessModes:
   - ReadWriteOnce
