--- a/mdr/busybox/cephfs/busybox-pod.yaml
+++ b/mdr/busybox/cephfs/busybox-pod.yaml
@@ -23,7 +23,7 @@ spec:
             /mnt/test/simple_io.sh
         image: quay.io/vcppds7878/busybox:latest
         imagePullPolicy: IfNotPresent
-        name: busybox-cephfs
+        name: busybox
         volumeMounts:
         - mountPath: /mnt/test
           name: mypvc
