--- a/mdr/busybox/rbd/busybox-pvc.yaml
+++ b/mdr/busybox/rbd/busybox-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-rbd-bvc
+  name: busybox-rbd-pvc
   labels:
     appname: busybox-rbd
 spec:
