Add the channel and subsription
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/busybox-workload/busybox-cephfs-pod.yaml
+++ b/mdr/busybox-workload/busybox-cephfs-pod.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     appname: busybox
   name: busybox-cephfs
+  namespace: busybox-workload
 spec:
   selector:
     matchLabels:
