--- a/mdr/busybox-workload/placement-rule.yaml
+++ b/mdr/busybox-workload/placement-rule.yaml
@@ -3,8 +3,9 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   labels:
-    app: busybox
+    app: busybox-workload
   name: busybox-placement
+  namespace: busybox-workload
 spec:
   clusterConditions:
     - type: ManagedClusterConditionAvailable
