--- a/mdr/busybox-workload/busybox-cephfs-pvc.yaml
+++ b/mdr/busybox-workload/busybox-cephfs-pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: busybox-cephfs-pvc
+  namespace: busybox-workload
   labels:
     appname: busybox
 spec:
