--- a/mdr/busybox-workload/busybox-rbd-pod.yaml
+++ b/mdr/busybox-workload/busybox-rbd-pod.yaml
@@ -2,8 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    appname: busybox-rbd
+    appname: busybox
   name: busybox-rbd
+  namespace: busybox-workload
 spec:
   selector:
     matchLabels:
