Create a new directory
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/busybox-sample/busybox/cephfs/busybox-cephfs-pvc.yaml
+++ b/mdr/busybox-sample/busybox/cephfs/busybox-cephfs-pvc.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-rbd-pvc
-  namespace: busybox-workload
+  name: busybox-cephfs-pvc
+  namespace: busybox-sample
   labels:
     appname: busybox
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: ocs-external-storagecluster-ceph-rbd
+  storageClassName: ocs-external-storagecluster-cephfs
   resources:
     requests:
       storage: 5Gi
