--- a/mdr/busybox-sample/busybox/drpc.yaml
+++ b/mdr/busybox-sample/busybox/drpc.yaml
@@ -2,17 +2,16 @@
 apiVersion: ramendr.openshift.io/v1alpha1
 kind: DRPlacementControl
 metadata:
-  labels:
-    app: busybox-workload
   name: busybox-drpc
-  namespace: busybox-workload
+  labels:
+    app: busybox-sample
 spec:
+  preferredCluster: "cluster1"
   drPolicyRef:
     name: odr-policy
   placementRef:
     kind: PlacementRule
     name: busybox-placement
-  preferredCluster: akrai-s14-c1
   pvcSelector:
     matchLabels:
       appname: busybox
