--- a/mdr/busybox-sample/busybox/rbd/busybox-rbd-pvc.yaml
+++ b/mdr/busybox-sample/busybox/rbd/busybox-rbd-pvc.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: busybox-cephfs-pvc
-  namespace: busybox-workload
+  name: busybox-rbd-pvc
+  namespace: busybox-sample
   labels:
     appname: busybox
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: ocs-external-storagecluster-cephfs
+  storageClassName: ocs-external-storagecluster-ceph-rbd
   resources:
     requests:
       storage: 5Gi
