--- a/mdr/busybox-sample/busybox/subscription.yaml
+++ b/mdr/busybox-sample/busybox/subscription.yaml
@@ -3,10 +3,10 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
   annotations:
-    apps.open-cluster-management.io/github-branch: main
-    apps.open-cluster-management.io/github-path: mdr/busybox-workload
+    apps.open-cluster-management.io/github-branch: master
+    apps.open-cluster-management.io/github-path: mdr/busybox-sample/busybox/rbd
   labels:
-    app: busybox-workload
+    app: busybox-sample
   name: busybox-sub
 spec:
     channel: ramen-samples/ramen-gitops
