--- a/mdr/busybox-sample/busybox/app/busybox-cephfs-pod.yaml
+++ b/mdr/busybox-sample/busybox/app/busybox-cephfs-pod.yaml
@@ -17,7 +17,7 @@ spec:
         workload: busybox-cephfs
     spec:
       containers:
-      - command: ["/bin/sh", "-c"]
+              #- command: ["/bin/sh", "-c"]
         #args:
         # - wget "https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.14.tar.xz"; 
         #   tar -xvf linux-4.14.tar.xz 
