--- a/mdr/busybox-sample/busybox/app/busybox-cephfs-pod.yaml
+++ b/mdr/busybox-sample/busybox/app/busybox-cephfs-pod.yaml
@@ -18,6 +18,11 @@ spec:
     spec:
       containers:
       - command: ["/bin/sh", "-c"]
+        args:
+          - wget  https://raw.githubusercontent.com/red-hat-storage/ocs-workloads/master/rdr/busybox/scripts/kernel_untar.sh -O /mnt/test/kernel_untar.sh;
+            wget https://raw.githubusercontent.com/red-hat-storage/ocs-workloads/master/rdr/busybox/scripts/kernel_untar_integrity_check.sh  -O /mnt/test/kernel_untar_integrity_check.sh;
+            chmod +x /mnt/test/kernel_untar.sh; chmod +x /mnt/test/kernel_untar_integrity_check.sh;
+            /mnt/test/kernel_untar.sh
         image: quay.io/vcppds7878/busybox:latest
         imagePullPolicy: IfNotPresent
         name: busybox
