--- a/mdr/busybox-sample/busybox/app/busybox-rbd-pod.yaml
+++ b/mdr/busybox-sample/busybox/app/busybox-rbd-pod.yaml
@@ -23,7 +23,7 @@ spec:
             wget https://raw.githubusercontent.com/red-hat-storage/ocs-workloads/master/rdr/busybox/scripts/kernel_untar_integrity_check.sh  -O /mnt/test/kernel_untar_integrity_check.sh;
             chmod +x /mnt/test/kernel_untar.sh; chmod +x /mnt/test/kernel_untar_integrity_check.sh;
             /mnt/test/kernel_untar.sh
-        image: quay.io/vcppds7878/busybox:latest
+        image: quay.io/ocsci/rdr-ocs-workload
         imagePullPolicy: IfNotPresent
         name: busybox
         volumeMounts:
