Update label and add namespace
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
@@ -2,8 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    appname: busybox-cephfs
+    appname: busybox
   name: busybox-cephfs
+  namespace: busybox-sample
 spec:
   selector:
     matchLabels:
