--- a/mdr/automation-purpose/busybox/app/busybox-rbd-pvc.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-rbd-pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: busybox-rbd-pvc
+  namespace: busybox-sample
   labels:
     appname: busybox-rbd
 spec:
