--- a/subscriptions/busybox/app/busybox-cephfs-pvc.yaml
+++ b/subscriptions/busybox/app/busybox-cephfs-pvc.yaml
@@ -3,12 +3,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: busybox-cephfs-pvc
+  namespace: busybox-sample
   labels:
-    appname: busybox-cephfs
+    appname: busybox
 spec:
   accessModes:
   - ReadWriteOnce
   storageClassName: ocs-external-storagecluster-cephfs
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
