Increase size of PVc
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/automation-purpose/busybox/app/busybox-rbd-pod.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-rbd-pod.yaml
@@ -4,8 +4,8 @@ metadata:
   labels:
     appname: busybox
   name: busybox-rbd
-  namespace: busybox-sample
-spec:
+  namespace: test-app
+  spec:
   selector:
     matchLabels:
       workload: busybox-rbd
