--- a/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     appname: busybox
   name: busybox-cephfs
-  namespace: busybox-sample
+  namespace: test-app
 spec:
   selector:
     matchLabels:
