--- a/mdr/automation-purpose/busybox/app/busybox-cephfs-pvc.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-cephfs-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: busybox-cephfs-pvc
-  namespace: busybox-sample
+  namespace: test-app  
   labels:
     appname: busybox
 spec:
