--- a/mdr/automation-purpose/busybox/app/busybox-rbd-pvc.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-rbd-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: busybox-rbd-pvc
-  namespace: busybox-sample
+  namespace: test-app
   labels:
     appname: busybox-rbd
 spec:
@@ -12,4 +12,4 @@ spec:
   storageClassName: ocs-external-storagecluster-ceph-rbd
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
