to deploy with correct label
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/busybox-app/busybox-cephfs-pvc.yaml
+++ b/mdr/busybox-app/busybox-cephfs-pvc.yaml
@@ -4,7 +4,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: busybox-cephfs-pvc
   labels:
-    appname: busybox-cephfs
+    appname: busybox-app-1
 spec:
   accessModes:
   - ReadWriteOnce
