--- a/mdr/busybox-app/busybox-cephfs-pod.yaml
+++ b/mdr/busybox-app/busybox-cephfs-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    appname: busybox-cephfs
+    appname: busybox-app-1
   name: busybox-cephfs
 spec:
   selector:
