--- a/mdr/busybox-app/busybox-rbd-pvc.yaml
+++ b/mdr/busybox-app/busybox-rbd-pvc.yaml
@@ -4,7 +4,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: busybox-rbd-pvc
   labels:
-    appname: busybox-rbd
+    appname: busybox-app-1
 spec:
   accessModes:
   - ReadWriteOnce
