Clean the directories
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
+++ b/mdr/automation-purpose/busybox/app/busybox-cephfs-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     appname: busybox
   name: busybox-cephfs
-  namespace: test-app
+  namespace: busybox-sample
 spec:
   selector:
     matchLabels:
