--- a/mdr/automation-purpose/busybox/drpc.yaml
+++ b/mdr/automation-purpose/busybox/drpc.yaml
@@ -3,9 +3,8 @@ apiVersion: ramendr.openshift.io/v1alpha1
 kind: DRPlacementControl
 metadata:
   name: busybox-drpc
-  namespace: test-app
   labels:
-    app: test-app
+    app: busybox-sample
 spec:
   preferredCluster: "akrai-s19-c1"
   drPolicyRef:
