--- a/mdr/automation-purpose/busybox/subscription.yaml
+++ b/mdr/automation-purpose/busybox/subscription.yaml
@@ -4,11 +4,10 @@ kind: Subscription
 metadata:
   annotations:
     apps.open-cluster-management.io/github-branch: master
-    apps.open-cluster-management.io/github-path: mdr/automation-purpose/busybox/app
+    apps.open-cluster-management.io/github-path: subscriptions/busybox/app
   labels:
-    app: test-app
+    app: busybox-sample
   name: busybox-sub
-  namespace: test-app
 spec:
     channel: ramen-samples/ramen-gitops
     placement:
