Update image to quay.io
Signed-off-by: Akarsha-rai <akrai@redhat.com>

--- a/mdr/cronjob/cronjob.yaml
+++ b/mdr/cronjob/cronjob.yaml
@@ -30,7 +30,7 @@ spec:
         spec:
           containers:
           - name: hello
-            image: busybox
+            image: quay.io/vcppds7878/busybox:latest
             args:
             - /bin/sh
             - -c
