--- a/mdr/job/job_cephfs.yaml
+++ b/mdr/job/job_cephfs.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: job-pvc
+  name: job-cephfspvc
   labels:
     appname: job-pvc
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: ocs-external-storagecluster-ceph-rbd
+  storageClassName: ocs-external-storagecluster-cephfs
   resources:
     requests:
       storage: 5Gi
@@ -16,14 +16,14 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: countdown
+  name: countdown-cephfs
 spec:
   completions: 12
   parallelism: 3
   ttlSecondsAfterFinished: 100
   template:
     metadata:
-      name: countdown
+      name: countdown-cephfs
     spec:
       containers:
       - name: counter
@@ -31,7 +31,7 @@ spec:
         command:
          - "bin/bash"
          - "-c"
-         - "for i in {1..100000} ; do date; echo Hello from the Kubernetes cluster; sleep 10; done"
+         - "for i in {1..10000} ; do date; echo Hello from the Kubernetes cluster; sleep 10; done"
       restartPolicy: Never
       volumeMounts:
       - mountPath: /mnt/target
@@ -39,5 +39,5 @@ spec:
   volumes:
     - name: mypvc
       persistentVolumeClaim:
-      claimName: job-pvc
+      claimName: job-cephfspvc
       readOnly: false
